app/css/app.css
body{
  width: 100%;
  margin: 0;
  padding: 25px;
}
.warning{
  background-color: orange;
  font-size: 1.2em;
  padding: 25px;
  width: 100%;
}

.videoWrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  height: 0;
  margin: 0 auto;
}
.videoWrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.buttonsWrapper{
  width: 100%;
  text-align: center;
  padding-top: 5px;
}
.buttonsWrapper button{
  width: 33%;
}

